src/css/app.scss
@use "sass:string";

// app global css in SCSS form
.standalone {
  @media (display-mode: browser), (display-mode: fullscreen) {
    display: none;
  }
}

body {
  --page-color: white;
  --card-color: white;
  --distinct-bg-color: #eee;
  --separator-color: #{$separator-color};

  .text-page {
    color: initial;
  }

  &.body--dark {
    --page-color: var(--q-dark-page);
    --card-color: var(--q-dark);
    --distinct-bg-color: #282828;
    --separator-color: #{$separator-dark-color};

    .text-page {
      color: #fff;
    }
  }

  .bg-page {
    background: var(--page-color);
  }
}

.bg-uj { background: $v-lo-uj; }
.text-uj { color: $v-lo-uj; }

.bg-institute { background: $v-lo-institute; }
.text-institute { color: $v-lo-institute }

.bg-dh { background: $v-lo-dh; }
.text-dh { color: $v-lo-dh; }

.text-reduced {
  opacity: 0.5;
}

a:not(.q-btn):not(.q-item):not(.q-tab) {
  color: $primary;

  &:not(:hover):not(:active) {
    text-decoration: none;
  }
}

.tab-navigation {
  font-size: 0.75em;
  color: $primary;
  text-decoration: underline;
  cursor: pointer;
  user-select: none;

  &:not(:focus) {
    opacity: 0;
    pointer-events: none;
  }
}

.col-fill, .row-fill {
  flex-grow: 1;
  flex-basis: 0;
}
.col-fill {
  width: 0;
}
.row-fill {
  height: 0;
}

$sides: top, bottom, left, right;

@each $side in $sides {
  $letter: string.slice($side, 0, 1);

  .border-#{$letter}, .border-#{$letter}-no-last:not(:last-child) {
    border-#{$side}: var(--separator-color) 1px solid !important;
  }
}

@import "time-marker";
@import "transitions";

